# nucleoid-leaderboards

./: Cargo.toml  README.md
.github/workflows/: build.yml  validate.yml
leaderboards/beginner_withersweeper/: fields_uncovered.json  games_won.json  quickest_time.json
leaderboards/destroy_the_monument/: damage_dealt.json  games_won.json  monuments_destroyed.json  total_kills.json
leaderboards/downpour/: games_won.json  longest_time.json  players_punched.json  rounds_survived.json
leaderboards/electricfloor/: blocks_converted.json  games_won.json  longest_time.json
leaderboards/expert_withersweeper/: fields_uncovered.json  games_won.json  quickest_time.json
leaderboards/fortress/: captures.json  damage_dealt.json  games_won.json  modules_placed.json  rows_captured.json  total_kills.json
leaderboards/infiniteparkour/: all_time_points.json  points.json
leaderboards/intermediate_withersweeper/: fields_uncovered.json  games_won.json  quickest_time.json
leaderboards/itemhunt/: games_won.json  items_obtained.json
leaderboards/itemhunt_with_crafting/: games_won.json  items_obtained.json
leaderboards/loop_de_loop/: games_won.json  missed_hoops.json  quickest_time.json  total_hoops.json
leaderboards/loop_de_loop_amplified/: games_won.json  missed_hoops.json  quickest_time.json  total_hoops.json
leaderboards/loop_de_loop_flappy/: games_won.json  missed_hoops.json  quickest_time.json  (+1 more)
src/: model.rs
translations/: de.json  en_us.json  et.json  fr.json  nb_NO.json  pt_BR.json  ru.json  sl.json  sv.json
validator/: Cargo.toml
validator/src/: main.rs
(+21 files in other folders)
